# innernode

./: Cargo.toml  DataModels.kt  InnerVpnService.kt  KeyManager.kt  MainActivity.kt  README.md  RoomsViewModel.kt  VpnApi.kt  index.html  keymanager.rs  package-lock.json  package.json  tauri.conf.json
android/: local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/release/: output-metadata.json
android/app/release/baselineProfiles/0/: app-release.dm
android/app/release/baselineProfiles/1/: app-release.dm
android/app/src/androidTest/java/com/bypass/innernode/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/bypass/innernode/: RetrofitClient.kt  RoomsViewModelFactory.kt
android/app/src/main/java/com/bypass/innernode/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/bypass/innernode/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
desktop/: package.json
desktop/src-tauri/: innernode.manifest
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: api.rs  main.rs  wireguard.rs
