[package]
name = "innernode"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
rand = { version = "0.8", features = ["getrandom"] }
dirs = "5"
anyhow = "1"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "innernode"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
